sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:6: error: illegal start of simple expression
   while(j>0 && getValeur(j-1)>v)){
                                 ^